<resources>
    <string name="app_name">SEG2105 App</string>
    <string name="login_text">Log in</string>
    <string name="newuser_text">New User?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="usernamewelcomeText">test words to be overwritten</string>
    <string name="signoutButton">Click to sign out</string>
    <string name="newService">Create New Service</string>
    <string name="getServices">Manage Services</string>
    <string name="serviceName">Name of Service</string>
    <string name="hourlyRate">Hourly Rate</string>
    <string name="service_name_hint">Enter the name of the new Service</string>
    <string name="service_rate_hint">Enter an hourly rate, separated by a period</string>
    <string name="save_button">Save Changes</string>
    <string name="cancel_button">Cancel Changes</string>
    <string name="new_service">Create as New Service</string>
    <string name="createServiceBtn">Create Service</string>
    <string name="manageServiceBtn">Manage Services</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userName">Username</string>
    <string name="userType">User Type</string>
    <string name="deleteButton">Delete this Service</string>
    <string name="manage_service_title">Services Offered</string>
    <string name="phoneNum">Phone Number</string>
    <string name="address">Address</string>
    <string name="companyName">Company Name</string>
    <string name="lisenseTest">License:</string>
    <string name="licenseYes">Yes</string>
    <string name="lisenceNo">No</string>
    <string name="updateInfoBtn">Update Info</string>
    <string name="descriptionText">Personal Description</string>
    <string name="description">Type Here...</string>
    <string name="edit_avail_title">Edit Availabilities</string>
    <string name="choose_avail_start">Availability Start Time</string>
    <string name="choose_avail_end">Availability End Time</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="create_service_button">Create Services</string>
    <string name="Log_out_button">Log Out</string>
    <string name="new_user_create_button">New user? Click Here to Sign Up!</string>
    <string name="confirmAdditionsButton">Confirm Additions and Return</string>
    <string name="PreviewText">Services to Add</string>
    <string name="refreshButton">Refresh</string>
    <string name="searchButton_ServiceName">Search by Service</string>
    <string name="providerSearchButton">Search by Service Provider</string>
    <string name="userlistTitle">List of Users</string>
    <string name="submit">Submit</string>

    <string-array name="times_array">
        <item>-----</item>
        <item>closed</item>
        <item>0:00</item>
        <item>0:30</item>
        <item>1:00</item>
        <item>1:30</item>
        <item>2:00</item>
        <item>2:30</item>
        <item>3:00</item>
        <item>3:30</item>
        <item>4:00</item>
        <item>4:30</item>
        <item>5:00</item>
        <item>5:30</item>
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>

    </string-array>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="providerSearchBtn">Search for Service Provider</string>
    <string name="textSearch" />
    <string name="searchBtn">Search</string>
    <string name="searchText">Search by Name, Rating, or Service</string>
    <string name="viewUserListButton">Click to view List of current Users</string>
    <string name="changePersonalInfoBtn">Click to change your Personal Information</string>
    <string name="title_of_sProvider_list">List of Service Providers</string>
    <string name="title_of_user_list">List of Home owner Accounts</string>

</resources>
